--- a/pages/home.html
+++ b/pages/home.html
@@ -26,12 +26,13 @@
             <br>Universidad de Concepción, Concepción, Chile, March 2012.</p><br>
     
         <h1>Research Interests</h1>
-            <p>Numerical analysis of partial differential equations 
+            <p>Numerical analysis of partial differential equations (PDEs)
             <br>Finite element methods (FEMs)
             <br>Discontinuous Galerkin methods
 	    <br>Minimum residual FEMs
+	    <br>Fictitious domain methods
             <br><i>A posteriori</i> error analysis
-	    <br>Optimization of FEMs using neural networks
+	    <br>Solving PDEs using neural networks
             <br>Fluid mechanics
             <br>Electromagnetism</p><br>
             
