--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -11,9 +11,11 @@
 <br>
 In March 2008, I moved to <a href="http://www.welcomechile.com/concepcion/index_i.html" target="_blank">Concepcion</a>, Chile, to study Mathematical Engineering. In March 2014, I received my degree in Mathematical Engineering from Universidad de Concepcion, where I worked on locking-free finite element methods for elastodynamics problems in thin structures with my advisers Rodolfo Rodriguez and Frank Sanhueza.<br>
 <br>
-In March 2014, I started my PhD studies in the Applied Sciences with a minor in Mathematical Engineering program from Universidad de Concepcion. I worked in my Ph.D. thesis, "Adaptive and high order hybridizable discontinuous Galerkin (HDG) methods in fluid mechanics", with my advisers Rodolfo Araya, Weifeng Qiu and Manuel Solano.<br>
+In March 2014, I started my PhD studies in the Applied Sciences with a minor in Mathematical Engineering program from Universidad de Concepcion. I worked on my Ph.D. thesis, "Adaptive and high order hybridizable discontinuous Galerkin (HDG) methods in fluid mechanics", with my advisers Rodolfo Araya, Weifeng Qiu, and Manuel Solano.<br>
 <br>
-I moved to France in December 2019. Here I'm working as postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri in a posteriori error estimations for HDG discretizations of Maxwell's equations.
+I moved to France in December 2019. There I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for HDG discretizations of Maxwell's equations.
+<br>
+In June 2021, I moved to Valparaíso, Chile. Here I'm working as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving PDEs using neural networks.
 </p>
 </body>
 </html>
