--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,7 @@
         <td width=51% align="center">
         <h1>Education</h1>
             <p>Doctor en Ciencias Aplicadas c/m Ingeniería Matemática
-	    <br>(Ph.D in Applied Mathematics) 
+	    <br>(PhD in Applied Mathematics) 
             <br>Universidad de Concepción, Concepción, Chile, Dec. 2018.
             <br><br>Ingeniero Civil Matemático
             <br>(Mathematical Engineer) 
