--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -15,7 +15,7 @@ In March 2014, I started my PhD studies in the Applied Sciences with a minor in 
 <br>
 I moved to France in December 2019. There I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for HDG discretizations of Maxwell's equations.<br>
 <br>
-In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i.html" target="_blank">Valparaíso</a>, Chile. Here I'm working as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving PDEs using neural networks.
+In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i.html" target="_blank">Valparaíso</a>, Chile. Here I'm working as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving partial differential equations using neural networks.
 </p>
 </body>
 </html>
