--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -13,7 +13,7 @@ In March 2008, I moved to <a href="http://www.welcomechile.com/concepcion/index_
 <br>
 In March 2014, I started my PhD studies in the Applied Sciences with a minor in Mathematical Engineering program from Universidad de Concepcion. I worked on my PhD thesis, "Adaptive and high order hybridizable discontinuous Galerkin (HDG) methods in fluid mechanics", with my advisers Rodolfo Araya, Weifeng Qiu, and Manuel Solano.<br>
 <br>
-I moved to France in December 2019. There I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for HDG discretizations of Maxwell's equations.<br>
+I moved to France in December 2019. There I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for finite element and HDG discretizations of Maxwell's equations and related models.<br>
 <br>
 In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i.html" target="_blank">Valparaíso</a>, Chile. Here I'm working as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving partial differential equations using neural networks.
 </p>
