--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,8 @@
     
         <h1>Research Interests</h1>
             <p>Numerical analysis of partial differential equations (PDEs)
-            <br>Finite element methods (FEMs) - Discontinuous Galerkin methods
+            <br>Finite element methods (FEMs)
+	    <br>Discontinuous Galerkin methods
 	    <br>Minimum residual FEMs
 	    <br>Fictitious domain methods
             <br><i>A posteriori</i> error analysis
