--- a/pages/home.html
+++ b/pages/home.html
@@ -54,7 +54,7 @@
             <br>phone: 56-41-2222222</p><br> -->
         </td>
     
-        <td width=49% align="center"><img src="../img/pvega_inria.jpg" width=“70%”></td>    
+        <td width=49% align="top"><img src="../img/pvega_inria.jpg" width=“70%”></td>    
     </tr>
 </table>
 
