--- a/pages/home.html
+++ b/pages/home.html
@@ -54,11 +54,12 @@
             <br>phone: 56-41-2222222</p><br> -->
         </td>
     
-        <td width=49% align="center"><img src="../img/pvega_inria.jpg" width=“70%”></td>
+        <td width=49% align="center"><img src="../img/pvega_inria.jpg" width=“70%”>
 
             <p>ORCiD
             <br>WoS ResearcherID
 	    <br>Scopus ID</p><br>
+	</td>
     </tr>
 </table>
 
