--- a/pages/home.html
+++ b/pages/home.html
@@ -54,11 +54,12 @@
             <br>phone: 56-41-2222222</p><br> -->
         </td>
     
-        <td width=49% align="center"><img src="../img/pvega_inria.jpg" width=“70%”>
+        <td width=49% align="left"><img src="../img/pvega_inria.jpg" width=“70%”>
 
-            <p>ORCiD
-            <br>WoS ResearcherID
-	    <br>Scopus ID</p><br>
+            <p>
+	    <br>ORCiD: <a href="https://orcid.org/0000-0001-6047-9074" target="_blank">0000-0001-6047-9074</a>
+            <br>WoS ResearcherID: <a href="https://www.webofscience.com/wos/author/record/3874698" target="_blank">AHC-8969-2022</a>
+	    <br>Scopus ID: <a href="https://www.scopus.com/authid/detail.uri?authorId=57221140461" target="_blank">57221140461</a></p><br>
 	</td>
     </tr>
 </table>
