--- a/pages/home.html
+++ b/pages/home.html
@@ -16,7 +16,7 @@
         <td width=51% align="center">
         <h1>Education</h1>
             <p>Doctor en Ciencias Aplicadas c/m Ingeniería Matemática
-	    <br>(PhD in Applied Mathematics) 
+	    <br>(Ph.D in Applied Mathematics) 
             <br>Universidad de Concepción, Concepción, Chile, Dec. 2018.
             <br><br>Ingeniero Civil Matemático
             <br>(Mathematical Engineer) 
@@ -28,7 +28,7 @@
         <h1>Research Interests</h1>
             <p>Numerical analysis of partial differential equations (PDEs)
             <br>Finite element methods (FEMs)
-	    <br>Discontinuous Galerkin methods
+            <br>Discontinuous Galerkin methods
 	    <br>Minimum residual FEMs
 	    <br>Fictitious domain methods
             <br><i>A posteriori</i> error analysis
@@ -54,13 +54,7 @@
             <br>phone: 56-41-2222222</p><br> -->
         </td>
     
-        <td width=49% align="left"><img src="../img/pvega_inria.jpg" width=“70%”>
-
-            <p>
-	    <br>ORCiD: <a href="https://orcid.org/0000-0001-6047-9074" target="_blank">0000-0001-6047-9074</a>
-            <br>WoS ResearcherID: <a href="https://www.webofscience.com/wos/author/record/3874698" target="_blank">AHC-8969-2022</a>
-	    <br>Scopus ID: <a href="https://www.scopus.com/authid/detail.uri?authorId=57221140461" target="_blank">57221140461</a></p><br>
-	</td>
+        <td width=49% align="center"><img src="../img/pvega_inria.jpg" width=“70%”></td>    
     </tr>
 </table>
 
