--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <li><a href="#" onclick="frames(13)">Linux & Software</a></li>
             </ul>
             </li>-->
-            <li><a href="https://www.webofscience.com/wos/author/record/3874698" target="_blank">Web of Science</a></li>
+            <li><a href="https://www.mathgenealogy.org/id.php?id=242454" target="_blank">Mathematics Genealogy</a></li>
         </ul>
     </div>
   
