--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	    <li><a href="http://www-sop.inria.fr/atlantis/" target="_blank">ATLANTIS PROJECT-TEAM - INRIA</a></li>
             <li><a href="http://www.ci2ma.udec.cl/english.php" target="_blank">CI&sup2;MA - UDEC</a></li>
             <!--<li><a href="http://www.photom.lncc.br/index.html" target="_blank">PHOTOM (Math/Amsud Program)</a></li>-->
-            <!--<li><a href="https://www.icm.udec.cl/" target="_blank">MATHEMATICAL ENGINEERING - UDEC (in spanish)</a></li>-->
+            <!--<li><a href="https://www.icm.udec.cl/" target="_blank">MATHEMATICAL ENGINEERING - UDEC (in Spanish)</a></li>-->
         </ul>        
     </div>
     
@@ -100,7 +100,7 @@
                 <li><a href="#" onclick="frames(13)">Linux & Software</a></li>
             </ul>
             </li>-->
-            <li><a href="https://www.mathgenealogy.org/id.php?id=242454" target="_blank">Mathematics Genealogy</a></li>
+            <li><a href="https://www.mathgenealogy.org/id.php?id=242454" target="_blank">Math Genealogy</a></li>
         </ul>
     </div>
   
