--- a/pages/2022.html
+++ b/pages/2022.html
@@ -50,7 +50,7 @@
     <tr valign="top">
         <td id="numero">[17]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href="https://www.eccomas2022.org/admin/files/fileabstract/a247.pdf" target="_blank"><em>A posteriori error estimates for finite element discretizations of time-harmonic Maxwell’s equations coupled with a non-local hydrodynamic Drude model </em></a> (co-authors: <a href="https://tchaumont.github.io/" target="_blank">T. Chaumont-Frelet</a> and <a href="https://slanteri.github.io/" target="_blank">S. Lanteri</a>). <a href="https://www.eccomas2022.org/frontal/" target="_blank">8th European Congress on Computational Methods in Applied Sciences and
-Engineering, ECCOMAS Congress 2022</a>. Minisymposium: Robust and Scalable Numerical Methods for Wave Propagation: Design, Analysis and Application. Norwegian University of Science and Technology, SINTEF and the Nordic Association for Computational Mechanics in Engineering, Oslo, Norway, Junio 5 - 9, 2022.
+Engineering, ECCOMAS Congress 2022</a>. Minisymposium: Robust and Scalable Numerical Methods for Wave Propagation: Design, Analysis and Application. Norwegian University of Science and Technology, SINTEF, and the Nordic Association for Computational Mechanics in Engineering, Oslo, Norway, Junio 5 - 9, 2022.
         </td>
     </tr>
 </table>
