--- a/pages/published.html
+++ b/pages/published.html
@@ -30,7 +30,7 @@
 <table>
     <tr valign="top">
         <td id="numerito">[8]&nbsp;&nbsp;&nbsp;</td>
-        <td align="left">&nbsp;<a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://arxiv.org/abs/2210.00390" target="_blank"><em>An adaptive superconvergent mixed finite element method based on local residual minimization</em></a>. <b>SIAM Journal on Numerical Analysis</b>, accepted for publication (2023).</td>
+        <td align="left">&nbsp;<a href="http://ima.ucv.cl/academicos/ignacio-muga/"  target="_blank">I. Muga</a>, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://epubs.siam.org/doi/abs/10.1137/22M1526307" target="_blank"><em>An adaptive superconvergent mixed finite element method based on local residual minimization</em></a>. <b>SIAM Journal on Numerical Analysis</b>, vol. 61, pp. 2084-2105 (2023).</td>
     </tr>
 </table>
 
