--- a/pages/home.html
+++ b/pages/home.html
@@ -37,11 +37,11 @@
             <br>Electromagnetism</p><br>
             
         <h1>Contact</h1>
-            <p>Instituto de Matemáticas
-            <br>Pontificia Universidad Católica de Valparaíso
-            <br>Blanco Viel 596, Cerro Barón
-            <br>Valparaíso, Chile
-            <br>email: patrick.vega[at]pucv.cl</p><br>
+            <p>Departamento de Matemática y Ciencia de la Computación
+            <br>Pontificia Universidad de Santiago de Chile
+            <br>Las Sophoras 173, Estación Central
+            <br>Santiago, Chile
+            <br>email: patrick.vega[at]usach.cl</p><br>
            
    
 <!--         <h1>Current Position</h1>
