--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
 
     <div id="header">
         <a href=""><h1>PATRICK VEGA</h1></a>
-        <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Postdoctoral Researcher at the Pontificia Universidad Católica de Valparaíso (IMA)</h2>
+        <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor at Universidad de Santiago de Chile (DMCC - USACH)</h2>
     </div>
   
     <div id="navigation-sup">
         <ul>
             <li id="lihome"><a href="#" onclick="frames(1)"><p>HOME</p></a></li>
+	    <li><a href="https://www.dmcc.usach.cl/" target="_blank">DMCC - USACH</a></li>
             <li><a href="http://ima.ucv.cl/" target="_blank">IMA - PUCV</a></li>
 	    <li><a href="http://www-sop.inria.fr/atlantis/" target="_blank">ATLANTIS PROJECT-TEAM - INRIA</a></li>
             <li><a href="http://www.ci2ma.udec.cl/english.php" target="_blank">CI&sup2;MA - UDEC</a></li>
