--- a/pages/home.html
+++ b/pages/home.html
@@ -38,7 +38,8 @@
             
         <h1>Contact</h1>
             <p>Departamento de Matemática y Ciencia de la Computación
-            <br>Pontificia Universidad de Santiago de Chile
+            <br>Facultad de Ciencias
+	    <br>Universidad de Santiago de Chile
             <br>Las Sophoras 173, Estación Central
             <br>Santiago, Chile
             <br>email: patrick.vega[at]usach.cl</p><br>
