--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <div id="container">
 
     <div id="header">
-        <a href=""><h1>&nbsp;PATRICK VEGA</h1></a>
-        <h2 align="left">&nbsp;Associate Professor at <a href="https://www.dmcc.usach.cl/" target="_blank">Departamento de Matemática y Ciencia de la Computación, USACH</a>, Chile</h2>
+        <a href=""><h1>PATRICK VEGA</h1></a>
+        <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor at <a href="https://www.dmcc.usach.cl/" target="_blank">Dept. de Matemática y Ciencia de la Computación, USACH</a>, Chile</h2>
     </div>
   
     <div id="navigation-sup">
