--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	    <li><a href="http://www-sop.inria.fr/atlantis/" target="_blank">ATLANTIS PROJECT-TEAM - INRIA</a></li>
             <li><a href="http://www.ci2ma.udec.cl/english.php" target="_blank">CI&sup2;MA - UDEC</a></li>
             <!--<li><a href="http://www.photom.lncc.br/index.html" target="_blank">PHOTOM (Math/Amsud Program)</a></li>-->
-            <!--<li><a href="https://www.icm.udec.cl/" target="_blank">MATHEMATICAL ENGINEERING - UDEC (in Spanish)</a></li>-->
+            <li><a href="https://www.ing-mat.udec.cl/" target="_blank">DIM - UDEC</a></li>
         </ul>        
     </div>
     
