--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li id="lihome"><a href="#" onclick="frames(1)"><p>HOME</p></a></li>
 	    <li><a href="https://www.dmcc.usach.cl/" target="_blank">DMCC - USACH</a></li>
             <li><a href="http://ima.ucv.cl/" target="_blank">IMA - PUCV</a></li>
-	    <li><a href="http://www-sop.inria.fr/atlantis/" target="_blank">ATLANTIS PROJECT-TEAM - INRIA</a></li>
+	    <li><a href="http://www-sop.inria.fr/atlantis/" target="_blank">ATLANTIS - INRIA</a></li>
             <li><a href="http://www.ci2ma.udec.cl/english.php" target="_blank">CI&sup2;MA - UDEC</a></li>
             <!--<li><a href="http://www.photom.lncc.br/index.html" target="_blank">PHOTOM (Math/Amsud Program)</a></li>-->
             <li><a href="https://www.ing-mat.udec.cl/" target="_blank">DIM - UDEC</a></li>
