--- a/pages/home.html
+++ b/pages/home.html
@@ -38,7 +38,7 @@
             
         <h1>Contact</h1>
             <p>Departamento de Matemática y Ciencia de la Computación
-            <br>Facultad de Ciencias
+            <br>Facultad de Ciencia
 	    <br>Universidad de Santiago de Chile
             <br>Las Sophoras 173, Estación Central
             <br>Santiago, Chile
