--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="header">
         <a href=""><h1>PATRICK VEGA</h1></a>
-        <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor at Dept. de Matemática y Ciencia de la Computación, USACH, Chile</h2>
+        <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor at Department of Mathematics & Computer Science, USACH, Chile</h2>
     </div>
   
     <div id="navigation-sup">
