--- a/pages/home.html
+++ b/pages/home.html
@@ -39,7 +39,7 @@
         <h1>Contact</h1>
             <p>Departamento de Matemática y Ciencia de la Computación
             <br>Facultad de Ciencia
-	    <br>Universidad de Santiago de Chile
+	    <br>Universidad de Santiago de Chile (USACH)
             <br>Las Sophoras 173, Estación Central
             <br>Santiago, Chile
             <br>email: patrick.vega[at]usach.cl</p><br>
