--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -15,7 +15,7 @@ In March 2014, I started my PhD in Applied Sciences with a minor in Mathematical
 <br>
 I moved to France in December 2019. There, I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for finite element and HDG discretizations of Maxwell's equations and related models.<br>
 <br>
-In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i.html" target="_blank">Valparaíso</a>, Chile. There, I worked as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving partial differential equations using neural networks.
+In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i.html" target="_blank">Valparaíso</a>, Chile. There, I worked as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving partial differential equations using neural networks.<br>
 <br>
 I've been an Associate Professor at the Department of Mathematics and Computer Science, Universidad de Santiago de Chile, <a href="http://www.welcomechile.com/santiago/index_i.html" target="_blank">Santiago</a>, Chile, since September 2023.
 </p>
