--- a/pages/my_thesis.html
+++ b/pages/my_thesis.html
@@ -28,7 +28,7 @@
         <td align="right"><strong>Program</strong></td>
         <td></td>
         <td align="left">Doctorado en Ciencias Aplicadas con mención en Ingeniería Matemática
-        <br>(Ph.D. in Applied Sciences with minor in Mathematical Engineering), Universidad de Concepción.</td>
+        <br>(Ph.D. in Applied Sciences with a mention in Mathematical Engineering), Universidad de Concepción.</td>
     </tr>    
     <tr>
         <td align="right"><strong>Advisers</strong></td>
