--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -11,7 +11,7 @@
 <br>
 In March 2008, I moved to <a href="http://www.welcomechile.com/concepcion/index_i.html" target="_blank">Concepción</a>, Chile, to study Mathematical Engineering. In March 2014, I received my degree in Mathematical Engineering from Universidad de Concepcion, where I worked on locking-free finite element methods for elastodynamics problems in thin structures with my advisers Rodolfo Rodriguez and Frank Sanhueza.<br>
 <br>
-In March 2014, I started my PhD in Applied Sciences with a minor in Mathematical Engineering from Universidad de Concepcion. I worked on my PhD thesis, "Adaptive and high order hybridizable discontinuous Galerkin (HDG) methods in fluid mechanics", with my advisers Rodolfo Araya, Weifeng Qiu, and Manuel Solano.<br>
+In March 2014, I started my PhD in Applied Sciences with a mention in Mathematical Engineering from Universidad de Concepcion. I worked on my PhD thesis, "Adaptive and high order hybridizable discontinuous Galerkin (HDG) methods in fluid mechanics", with my advisers Rodolfo Araya, Weifeng Qiu, and Manuel Solano.<br>
 <br>
 I moved to France in December 2019. There, I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for finite element and HDG discretizations of Maxwell's equations and related models.<br>
 <br>
