--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -18,6 +18,8 @@ I moved to France in December 2019. There, I worked as a postdoctoral researcher
 In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i.html" target="_blank">Valparaíso</a>, Chile. There, I worked as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving partial differential equations using neural networks.<br>
 <br>
 I've been an Associate Professor at the Department of Mathematics and Computer Science, Universidad de Santiago de Chile, <a href="http://www.welcomechile.com/santiago/index_i.html" target="_blank">Santiago</a>, Chile, since September 2023.
+<br>
+My research area is the numerical analysis of partial differential equations, focusing on the theoretical and practical aspects of finite element and (hybridizable) discontinuous Galerkin methods. My research interests are mainly associated with approaches to drive adaptive mesh-refinements as a posteriori error estimators and residual minimization in dual norms. I apply these techniques within the context of problems arising in fluid mechanics and electromagnetism.<br>  
 </p>
 </body>
 </html>
