--- a/pages/2022.html
+++ b/pages/2022.html
@@ -19,7 +19,7 @@
 <table>
     <tr valign="top">
         <td id="numero">[20]&nbsp;&nbsp;&nbsp;</td>
-        <td align="justify"><a href="" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="http://www.dmatuls.cl/portal/?page_id=73" target="_blank">Coloquio del Departamento de Matemáticas</a>. Universidad de La Serena, La Serena, Chile, November 2, 2022.
+        <td align="justify"><a href="https://www.youtube.com/watch?v=Hm6-wC3DugM" target="_blank"><em>An adaptive superconvergent finite element method based on local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="http://www.dmatuls.cl/portal/?page_id=73" target="_blank">Coloquio del Departamento de Matemáticas</a>. Universidad de La Serena, La Serena, Chile, November 2, 2022.
         </td>
     </tr>
 </table>
