--- a/pages/home.html
+++ b/pages/home.html
@@ -32,7 +32,7 @@
 	    <br>Minimum residual FEMs
 	    <br>Fictitious domain methods
             <br><i>A posteriori</i> error analysis
-	    <br>Solving PDEs using neural networks
+	    <br>Neural networks for solving PDEs
             <br>Fluid mechanics
             <br>Electromagnetism</p><br>
             
