--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="container">
 
     <div id="header">
-        <a href="https://www.dmcc.usach.cl/personas/patrick-vega/"><h1>PATRICK VEGA</h1></a>
+        <a href="https://www.dmcc.usach.cl/personas/patrick-vega/" target="_blank"><h1>PATRICK VEGA</h1></a>
         <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor at Department of Mathematics & Computer Science, USACH, Chile</h2>
     </div>
   
