--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -13,13 +13,13 @@ In March 2008, I moved to <a href="http://www.welcomechile.com/concepcion/index_
 <br>
 In March 2014, I started my PhD in Applied Sciences with a mention in Mathematical Engineering from Universidad de Concepcion. I worked on my PhD thesis, "Adaptive and high order hybridizable discontinuous Galerkin (HDG) methods in fluid mechanics", with my advisers Rodolfo Araya, Weifeng Qiu, and Manuel Solano.<br>
 <br>
-I moved to France in December 2019. There, I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for finite element and HDG discretizations of Maxwell's equations and related models.<br>
+I moved to <a href="https://en.wikipedia.org/wiki/Valbonne" target="_blank">Valbonne</a>, France, in December 2019. There, I worked as a postdoctoral researcher at Inria Sophia Antípolis - Méditerranée Research Centre with Théophile Chaumont-Frelet and Stéphane Lanteri on a posteriori error estimations for finite element and HDG discretizations of Maxwell's equations and related models.<br>
 <br>
 In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i.html" target="_blank">Valparaíso</a>, Chile. There, I worked as a postdoctoral researcher in the Institute of Mathematics at the Pontificia Universidad Católica de Valparaíso with Ignacio Muga on minimum residual finite element methods and on solving partial differential equations using neural networks.<br>
 <br>
 I've been an Associate Professor at the Department of Mathematics and Computer Science, Universidad de Santiago de Chile, <a href="http://www.welcomechile.com/santiago/index_i.html" target="_blank">Santiago</a>, Chile, since September 2023.<br>
 <br>
-My research area is the numerical analysis of partial differential equations, focusing on the theoretical and practical aspects of finite element and (hybridizable) discontinuous Galerkin methods. My research interests are mainly associated with approaches to drive adaptive mesh-refinements as a posteriori error estimators and residual minimization in dual norms. I apply these techniques to problems arising in fluid mechanics and electromagnetism.<br>  
+My research area is the numerical analysis of partial differential equations, focusing on the theoretical and practical aspects of finite element and (hybridizable) discontinuous Galerkin methods. My research interests are mainly associated with approaches to drive adaptive mesh refinements as a posteriori error estimators and residual minimization in dual norms. I apply these techniques to problems arising in fluid mechanics and electromagnetism.<br>  
 </p>
 </body>
 </html>
