--- a/pages/home.html
+++ b/pages/home.html
@@ -34,7 +34,7 @@
             <br><i>A posteriori</i> error analysis
 	    <br>Neural networks for solving PDEs
             <br>Fluid mechanics
-            <br>Electromagnetism</p><br>
+            <br>Electromagnetics</p><br>
             
         <h1>Contact</h1>
             <p>Departamento de Matemática y Ciencia de la Computación
