--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -19,7 +19,7 @@ In June 2021, I moved to <a href="http://www.welcomechile.com/valparaiso/index_i
 <br>
 I've been an Associate Professor at the Department of Mathematics and Computer Science, Universidad de Santiago de Chile, <a href="http://www.welcomechile.com/santiago/index_i.html" target="_blank">Santiago</a>, Chile, since September 2023.<br>
 <br>
-My research area is the numerical analysis of partial differential equations, focusing on the theoretical and practical aspects of finite element and (hybridizable) discontinuous Galerkin methods. My research interests are mainly associated with approaches to drive adaptive mesh refinements as a posteriori error estimators and residual minimization in dual norms. I apply these techniques to problems arising in fluid mechanics and electromagnetism.<br>  
+My research area is the numerical analysis of partial differential equations, focusing on the theoretical and practical aspects of finite element and (hybridizable) discontinuous Galerkin methods. My research interests are mainly associated with approaches to drive adaptive mesh refinements as a posteriori error estimators and residual minimization in dual norms. I apply these techniques to problems arising in fluid mechanics and electromagnetics.<br>  
 </p>
 </body>
 </html>
