--- a/pages/2024.html
+++ b/pages/2024.html
@@ -20,7 +20,7 @@
     <tr valign="top">
         <td id="numero">[30]&nbsp;&nbsp;&nbsp;</td>
         <td align="justify"><a href="https://www.mate.polimi.it/servizi/avvisi_rullo/upload/eventimate/2404.pdf" target="_blank"><em>An adaptive superconvergent mixed finite element method based on
-local residual minimization" </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="https://mox.polimi.it/seminars-full-list/" target="_blank">MOX Seminar</a>. Politecnico di Milano, Milan, Italy, July 2, 2024.
+local residual minimization </em></a> (co-authors: <a href="http://ima.ucv.cl/academicos/ignacio-muga/" target="_blank">I. Muga</a> and <a href="https://scholar.google.com/citations?user=8pYjH_QAAAAJ&hl=es" target="_blank">S. Rojas</a>). <a href="https://mox.polimi.it/seminars-full-list/" target="_blank">MOX Seminar</a>. Politecnico di Milano, Milan, Italy, July 2, 2024.
         </td>
     </tr>
 </table>
