--- a/pages/published.html
+++ b/pages/published.html
@@ -17,6 +17,15 @@
 </table>
 
 <br>
+
+<table>
+    <tr valign="top">
+        <td id="numerito">[10]&nbsp;&nbsp;&nbsp;</td>
+        <td align="justify">L. Camargo, <a href="https://scholar.google.com/citations?hl=es&user=8pYjH_QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">S. Rojas</a> and <b>P. Vega</b>: <a href="https://www.sciencedirect.com/science/article/pii/S0045782525002531" target="_blank"><em>Minimum-residual a posteriori error estimates for a hybridizable discontinuous Galerkin discretization of the Helmholtz equation</em></a> vol. 441, 117981 (2025).</td>
+    </tr>
+</table>
+    
+    <br>
     
 <table>
     <tr valign="top">
