--- a/pages/home.html
+++ b/pages/home.html
@@ -55,7 +55,7 @@
             <br>phone: 56-41-2222222</p><br> -->
         </td>
     
-        <td width=49% align="right"><img src="../img/pvega_DMCC-USACH.jpg" width=“70%”>
+        <td width=49% align="right"><img src="../img/pvega_DMCC-USACH.jpg" width="70%">
 
             <p>
 	    <br>ORCiD: <a href="https://orcid.org/0000-0001-6047-9074" target="_blank">0000-0001-6047-9074</a>
